@@ -1,6 +1,6 @@
 package coffee.ssafy.ssafee.jwt;
 
-import coffee.ssafy.ssafee.jwt.dto.JwtTokenInfo;
+import coffee.ssafy.ssafee.jwt.dto.JwtClaimInfo;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -11,11 +11,14 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
+@Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -26,9 +29,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String bearerToken = request.getHeader(HttpHeaders.AUTHORIZATION);
         if (bearerToken != null && bearerToken.startsWith("Bearer ")) {
             String accessToken = bearerToken.substring(7);
-            JwtTokenInfo jwtTokenInfo = jwtTokenProvider.parseAccessToken(accessToken);
-            List<GrantedAuthority> authorities = List.of(jwtTokenInfo::role);
-            Authentication authentication = new UsernamePasswordAuthenticationToken(jwtTokenInfo.id(), null, authorities);
+            JwtClaimInfo jwtClaimsInfo = jwtTokenProvider.parseAccessToken(accessToken);
+            List<GrantedAuthority> authorities = Collections.singletonList(jwtClaimsInfo::role);
+            Authentication authentication = new UsernamePasswordAuthenticationToken(jwtClaimsInfo.id(), null, authorities);
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
         filterChain.doFilter(request, response);
